Tan changed from 潭雅   to  谭雅
Tan changed from 潭雅   to  谭雅

--- a/zh-hans/about.html
+++ b/zh-hans/about.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>澳中桥 ， 潭雅∙巴落的专业背景 ， 电气工程师 ， 普通话 ，澳大利亚 昆士兰州 汤斯维尔市</title>
+  <title>澳中桥 ， 谭雅∙巴落的专业背景 ， 电气工程师 ， 普通话 ，澳大利亚 昆士兰州 汤斯维尔市</title>
 
   <link rel="canonical"  href="http://www.aozhongqiao.com/zh-hans/about.html">
   <link rel="alternate"  href="http://www.aozhongqiao.com/en/about.html" hreflang="en">
