--- a/zh-hans/courses.html
+++ b/zh-hans/courses.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>澳中桥， 潭雅·巴落的语言辅导服务</title>
+  <title>澳中桥， 谭雅·巴落的语言辅导服务</title>
 
   <link rel="canonical"  href="http://www.aozhongqiao.com/zh-hans/courses.html">
   <link rel="alternate"  href="http://www.aozhongqiao.com/en/courses.html" hreflang="en">  
