--- a/zh-hans/index.html
+++ b/zh-hans/index.html
@@ -4,7 +4,7 @@
 <html lang="zh-Hans">
 
 <head>
-	 <title>澳中桥，Tanya Barlow (英文名字)  潭雅·巴落 (中文名字)，普通话 英语 语言 辅导，澳大利亚 昆士兰州 汤斯维尔市</title>
+	 <title>澳中桥，Tanya Barlow (英文名字)  谭雅·巴落 (中文名字)，普通话 英语 语言 辅导，澳大利亚 昆士兰州 汤斯维尔市</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -229,8 +229,8 @@
 			</picture>  	
 
 
-    	<h1 id="tanyaTitle" class="visible-lg visible-md visible-sm" >TANYA  <span>BARLOW <br class="visible-sm "> (潭雅·巴落)</span></h1>
-    	<h1 id="tanyaTitleXS" class="visible-xs" >TANYA  <span>BARLOW <br> (潭雅·巴落)</span> </h1>
+    	<h1 id="tanyaTitle" class="visible-lg visible-md visible-sm" >TANYA  <span>BARLOW <br class="visible-sm "> (谭雅·巴落)</span></h1>
+    	<h1 id="tanyaTitleXS" class="visible-xs" >TANYA  <span>BARLOW <br> (谭雅·巴落)</span> </h1>
 
 		    
 
