zh-hans fees.html

--- a/zh-hans/fees.html
+++ b/zh-hans/fees.html
@@ -253,16 +253,16 @@
 				  <div class="text-center " id="fees" >
 	
 
-	    	    <h2 class="visible-sm visible-md visible-lg">澳$75/小时</h2>
-	    	    <h4 class="visible-xs">澳$75/小时</h4>
+	    	    <h2 class="visible-sm visible-md visible-lg">澳币$75/小时</h2>
+	    	    <h4 class="visible-xs">澳币$75/小时</h4>
 
 
-	        	<h2 class="visible-sm visible-md visible-lg">澳$45/小时 (学生)</h2>
-	        	<h4 class="visible-xs">澳$45/小时 (学生)</h4>
+	        	<h2 class="visible-sm visible-md visible-lg">澳币$45/小时 (学生)</h2>
+	        	<h4 class="visible-xs">澳币$45/小时 (学生)</h4>
 
 
-	        	<h2 class="visible-sm visible-md visible-lg">澳$35/小时 (汤市华侨会会员)</h2>
-	        	<h4 class="visible-xs"> 澳$35/小时 (汤市华侨会会员)</h4>
+	        	<h2 class="visible-sm visible-md visible-lg">澳币$35/小时 (汤市华侨会会员)</h2>
+	        	<h4 class="visible-xs"> 澳币$35/小时 (汤市华侨会会员)</h4>
 
 
 			    </div>
