--- a/indexHouse.html
+++ b/indexHouse.html
@@ -2,25 +2,8 @@
 <html lang="en">
 <head>
 
-
 	
-
-<<<<<<< HEAD
-<<<<<<< HEAD
-	<title>Accessible home for sale test2</title>
-=======
-	<title>Accessible home for sale test3</title>
->>>>>>> 5d85e24dc793d17834135375e63b15063ad9af57
-=======
-
-
-	
-
-	<title>Accessible home for sale 1</title>
-
-
->>>>>>> 9bf61d3dc0ad248ebfcf3d1576ddb40f2f368b89
-
+	<title>Accessible home for sale </title>
 
 	<meta charset="UTF-8">
 
