--- a/indexHouse.html
+++ b/indexHouse.html
@@ -5,21 +5,11 @@
 
 	
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-	<title>Accessible home for sale test2</title>
-=======
-	<title>Accessible home for sale test3</title>
->>>>>>> 5d85e24dc793d17834135375e63b15063ad9af57
-=======
+
+	<title>Accessible home for sale </title>
 
 
-	
 
-	<title>Accessible home for sale 1</title>
-
-
->>>>>>> 9bf61d3dc0ad248ebfcf3d1576ddb40f2f368b89
 
 
 	<meta charset="UTF-8">
