--- a/indexHouse.html
+++ b/indexHouse.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-	<title>Accessible home for sale</title>
+	<title>Accessible home for sale test3 </title>
 
 	<meta charset="UTF-8">
 
