--- a/indexHouse.html
+++ b/indexHouse.html
@@ -3,7 +3,7 @@
 <head>
 
 
-	<title>Accessible home for sale git hub web</title>
+	<title>Accessible home for sale newBranch02</title>
 
 	<meta charset="UTF-8">
 
