--- a/indexHouse.html
+++ b/indexHouse.html
@@ -5,7 +5,7 @@
 
 
 
-	<title>Accessible home for sale title new old title</title>
+	<title>Accessible home for sale title remote branch</title>
 
 
 	<meta charset="UTF-8">
