Tutorial Services and Engineering Services added
Style and content added for Tutorial Services and Engineering Services. Content for fees.html page.

--- a/en/fees.html
+++ b/en/fees.html
@@ -256,7 +256,9 @@
 
 	  				<div  id="fees" >
 
+	  					<h2 class="visible-sm visible-md visible-lg">Tutoring Services</h2>
 	  					<h3 class="visible-sm visible-md visible-lg">$75/hr</h3>
+	  					<h2 class="visible-xs">Tutoring Services</h2>
 	  					<h4 class="visible-xs">$75/hr</h4>
 
 	  					<h3 class="visible-sm visible-md visible-lg">$45/hr (students)</h3>
@@ -264,6 +266,19 @@
 
 	  					<h3 class="visible-sm visible-md visible-lg">$35/hr (members of Townsville Chinese Club)</h3>
 	  					<h4 class="visible-xs">$35/hr (members of Townsville Chinese Club)</h4>
+
+	  					<h2 class="visible-sm visible-md visible-lg">Engineering Services</h2>
+	  					<h3 class="visible-sm visible-md visible-lg">Price on Application</h3>
+	  					<h3 class="visible-sm visible-md visible-lg">Please email</h3>
+	  					<h3 class="visible-sm visible-md visible-lg">
+	  					  <a href="mailto:tanya.barlow@aozhongqiao.com">tanya.barlow@aozhongqiao.com</a>
+	  					</h3>
+	  					<h2 class="visible-xs">Engineering Services</h2>
+	  					<h4 class="visible-xs">Price on Application</h4>
+	  					<h4 class="visible-xs">Please email</h4>
+	  					<h4 class="visible-xs">
+	  					  <a href="mailto:tanya.barlow@aozhongqiao.com">tanya.barlow@aozhongqiao.com</a>
+	  					</h4>
 
 	  				</div>
 
