--- a/en/engineering.html
+++ b/en/engineering.html
@@ -10,9 +10,9 @@
 
 	<title>Aozhongqiao, Description of engineering services provided by Tanya Barlow</title>
 
-	<link rel="canonical"  href="http://www.aozhongqiao.com/en/courses.html">
-	<link rel="alternate"  href="http://www.aozhongqiao.com/en/courses.html" hreflang="en">  
-	<link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/courses.html" hreflang="zh-hans">
+	<link rel="canonical"  href="http://www.aozhongqiao.com/en/engineering.html">
+	<link rel="alternate"  href="http://www.aozhongqiao.com/en/engineering.html" hreflang="en">  
+	<link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/engineering.html" hreflang="zh-hans">
 
 	<meta name="description" content="Basic Mandarin Chinese engineering for business or travel, Targeted Mandarin Chinese phrases and Simplified Chinese characters for professionals working in China">
 
@@ -205,7 +205,7 @@
 					<li role="presentation" ><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
 					<li role="presentation"><a href="about.html">Professional Background</a></li>
 					<li role="presentation" ><a href="courses.html">Tutoring Services</a></li>
-					<li role="presentation" class="active"><a href="courses.html">Engineering Services</a></li>
+					<li role="presentation" class="active"><a href="engineering.html">Engineering Services</a></li>
 					<li role="presentation"><a href="qual.html">Qualifications</a></li>
 					<li role="presentation"><a href="affiliations.html">Affiliations</a></li>
 					<li role="presentation"><a href="fees.html">Fees</a></li>
@@ -214,7 +214,7 @@
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right">
-					<li role="presentation"><a lang="zh-Hans" href="../zh-hans/courses.html">CH 中文</a></li>
+					<li role="presentation"><a lang="zh-Hans" href="../zh-hans/engineering.html">CH 中文</a></li>
 				</ul>
 			</div>
 
