--- a/en/engineering.html
+++ b/en/engineering.html
@@ -202,7 +202,7 @@
 
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-left">
-					<li role="presentation" ><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
+					<li role="presentation" ><a href="../index.html"><span class="glyphicon glyphicon-home"></span></a></li>
 					<li role="presentation"><a href="about.html">Professional Background</a></li>
 					<li role="presentation" ><a href="courses.html">Tutoring Services</a></li>
 					<li role="presentation" class="active"><a href="engineering.html">Engineering Services</a></li>
