--- a/en/fees.html
+++ b/en/fees.html
@@ -192,9 +192,10 @@
 
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-left">
-					<li role="presentation" ><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
+					<li role="presentation" ><a href="../index.html"><span class="glyphicon glyphicon-home"></span></a></li>
 					<li role="presentation"><a href="about.html">Professional Background</a></li>
 					<li role="presentation"><a href="courses.html">Tutoring Services</a></li>
+					<li role="presentation"><a href="engineering.html">Engineering Services</a></li>
 					<li role="presentation"><a href="qual.html">Qualifications</a></li>
 					<li role="presentation"><a href="affiliations.html">Affiliations</a></li>
 					<li role="presentation" class="active"><a href="fees.html">Fees</a></li>
