Duplicate index.html file and hyperlink removed
Duplicate index.html file and hyperlink removed

--- a/zh-hans/index.html
+++ b/zh-hans/index.html
@@ -13,7 +13,7 @@
   
   <link rel="canonical"  href="http://www.aozhongqiao.com/zh-hans/index.html">
 
-  <link rel="alternate"  href="http://www.aozhongqiao.com/en/index.html" hreflang="en">
+  <link rel="alternate"  href="http://www.aozhongqiao.com/index.html" hreflang="en">
   <link rel="alternate"  href="http://www.aozhongqiao.com/" hreflang="en">
   <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/index.html" hreflang="zh-hans">
   
@@ -204,7 +204,7 @@
 		    		</ul>
 
 		    		<ul class="nav navbar-nav navbar-right">
-		    		  <li role="presentation"><a href="../en/index.html">EN 英文</a></li>
+		    		  <li role="presentation"><a href="../index.html">EN 英文</a></li>
 		    		</ul>
 	    		</div>
 
