Engineerings Services content added
Engineerings Services content added

--- a/en/engineering.html
+++ b/en/engineering.html
@@ -260,62 +260,65 @@
 	  				<div class="panel panel-default">
 	  					<div class="panel-heading">
 	  						<h4 class="panel-title">
-	  							<strong>Engineering Content 01</strong>
+	  							<strong>Background</strong>
 	  						</h4>
 	  					</div>
 
 	  					<div class="panel-body">
-	  						Engineering Content 01
+	  						<p>
+								I am an Australian electrical engineer who has studied Mandarin Chinese.  However, I am not a qualified translator or interpreter.
+	  						</p>
+	  						<p>
+								I would like to work in a technical liaison role in heavy industry, in either China or Australia (e.g. project work or commissioning teams),
+								where I can use my engineering and Chinese skills together.  I can speak basic conversational Mandarin Chinese, but my main strength 
+								is that I can read and write many technical characters in Simplified Chinese (e.g. 高炉   gāolú   blast furnace).
+
+	  						</p>
 	  					</div>
 	  				</div> 
 
 	  				<div class="panel panel-default">
 	  					<div class="panel-heading">
 	  						<h4 class="panel-title">
-	  							<strong>Engineering Content 02</strong>
+	  							<strong>Specific Skills</strong>
 	  						</h4>
 	  					</div>
 
 	  					<div class="panel-body">
-	  						Engineering Content 02
+
+		  					<p>
+								Electrical engineering experience in a heavy industry environment
+								(e.g. Port Kembla steelworks in Australia; BlueScope Steel China’s metal coating line in Suzhou, Jiangsu)
+		  					</p>
+
+		  					<p>
+		  						Ability to read engineering and technical drawings in Simplified Chinese
+		  					</p>
+
+		  					<p>
+		  						Preparation of engineering or process vocabulary lists in both English and Simplified Chinese (e.g. technical vocabulary lists which can be used for day-to-day process operations or commissioning projects by the Chinese workforce and expats)
+		  					</p>
+
+		  					<p>
+			  					Able to help Australian professionals in China or Australia with specific Chinese technical vocabulary (e.g. legal terms for lawyers; engineering terms for engineers)
+		  					</p>
+
+		  					<p>
+		  						Targeted English tutoring for Chinese engineering or technical professionals (I can help Chinese professionals with their spoken English for work presentations, and help them pronounce difficult technical words clearly)
+		  					</p>
+
+		  					<p>
+		  						Preparation of technical emails in English and Simplified Chinese to improve communication between companies in Australia and suppliers in China (e.g. technical specifications for electrical machinery, hydraulics, pneumatics etc.)
+		  					</p>
+
+		  					<p>
+		  						Preparation of targeted training courses for Australian business people travelling to China (Training courses comprise basic Mandarin Chinese tutoring, business etiquette, cultural awareness and specific industry vocabulary)
+		  					</p>		  							  							  							  							  					
+
 	  					</div>
 	  				</div> 
 
-	  				<div class="panel panel-default">
-	  					<div class="panel-heading">
-	  						<h4 class="panel-title">
-	  							<strong>Engineering Content 03</strong>
-	  						</h4>
-	  					</div>
-
-	  					<div class="panel-body">
-	  						Engineering Content 03
-	  					</div>
-	  				</div>
-
-	  				<div class="panel panel-default">
-	  					<div class="panel-heading">
-	  						<h4 class="panel-title">
-	  							<strong>Engineering Content 04</strong>
-	  						</h4>
-	  					</div>
-
-	  					<div class="panel-body">
-	  						Engineering Content 04
-	  					</div>
-	  				</div>
-
-	  				<div class="panel panel-default">
-	  					<div class="panel-heading">
-	  						<h4 class="panel-title">
-	  							<strong>Engineering Content 05</strong>
-	  						</h4>
-	  					</div>
-
-	  					<div class="panel-body">
-	  						Engineering Content 05
-	  					</div>
-	  				</div>
+	  				
 
 	  			</div>	
 
@@ -325,7 +328,7 @@
 
 	  					<div class="panel-heading">
 	  						<h4 class="panel-title">
-	  							Engineering Content 01
+	  							Background
 	  							<button  id="collLink01" type="button" class="btn btn-primary center-block" data-toggle="collapse" data-parent="#accordion" data-target="#collapse1"> 
 	  								Click for more information <span class="glyphicon glyphicon-chevron-down"></span>
 	  							</button>
@@ -334,7 +337,15 @@
 
 	  					<div id="collapse1" class="panel-collapse collapse">
 	  						<div class="panel-body ">
-	  							Engineering Content 01
+		  						<p>
+									I am an Australian electrical engineer who has studied Mandarin Chinese.  However, I am not a qualified translator or interpreter.
+		  						</p>
+		  						<p>
+									I would like to work in a technical liaison role in heavy industry, in either China or Australia (e.g. project work or commissioning teams),
+									where I can use my engineering and Chinese skills together.  I can speak basic conversational Mandarin Chinese, but my main strength 
+									is that I can read and write many technical characters in Simplified Chinese (e.g. 高炉   gāolú   blast furnace).
+
+		  						</p>
 	  						</div>
 	  					</div>
 
@@ -344,7 +355,7 @@
 
 	  					<div class="panel-heading" >
 	  						<h4 class="panel-title ">
-	  							Engineering Content 02 
+	  							Specific Skills
 	  							<button  id="collLink02" type="button" class="btn btn-primary center-block" data-toggle="collapse" data-parent="#accordion" data-target="#collapse2">
 	  								Click for more information <span class="glyphicon glyphicon-chevron-down"></span>
 	  							</button>
@@ -353,70 +364,40 @@
 
 	  					<div id="collapse2" class="panel-collapse collapse">
 	  						<div class="panel-body">
-	  							Engineering Content 02
+			  					<p>
+									Electrical engineering experience in a heavy industry environment
+									(e.g. Port Kembla steelworks in Australia; BlueScope Steel China’s metal coating line in Suzhou, Jiangsu)
+			  					</p>
+
+			  					<p>
+			  						Ability to read engineering and technical drawings in Simplified Chinese
+			  					</p>
+
+			  					<p>
+			  						Preparation of engineering or process vocabulary lists in both English and Simplified Chinese (e.g. technical vocabulary lists which can be used for day-to-day process operations or commissioning projects by the Chinese workforce and expats)
+			  					</p>
+
+			  					<p>
+				  					Able to help Australian professionals in China or Australia with specific Chinese technical vocabulary (e.g. legal terms for lawyers; engineering terms for engineers)
+			  					</p>
+
+			  					<p>
+			  						Targeted English tutoring for Chinese engineering or technical professionals (I can help Chinese professionals with their spoken English for work presentations, and help them pronounce difficult technical words clearly)
+			  					</p>
+
+			  					<p>
+			  						Preparation of technical emails in English and Simplified Chinese to improve communication between companies in Australia and suppliers in China (e.g. technical specifications for electrical machinery, hydraulics, pneumatics etc.)
+			  					</p>
+
+			  					<p>
+			  						Preparation of targeted training courses for Australian business people travelling to China (Training courses comprise basic Mandarin Chinese tutoring, business etiquette, cultural awareness and specific industry vocabulary)
+			  					</p>		  							
 	  						</div>
 	  					</div>
 
 	  				</div>
 
-	  				<div  class="panel panel-default">
-
-	  					<div class="panel-heading">
-	  						<h4 class="panel-title">
-	  							Engineering Content 03
-	  							<button   id="collLink03" type="button" class="btn btn-primary center-block" data-toggle="collapse" data-parent="#accordion" data-target="#collapse3">
-	  								Click for more information <span class="glyphicon glyphicon-chevron-down"></span>
-	  							</button>
-	  						</h4>
-	  					</div>
-
-	  					<div id="collapse3" class="panel-collapse collapse">
-	  						<div class="panel-body">
-	  							Engineering Content 03
-	  						</div>
-	  					</div>
-
-	  				</div>
-
-	  				<div  class="panel panel-default">
-
-	  					<div class="panel-heading">
-	  						<h4 class="panel-title">
-	  							Engineering Content 04
-	  							<button   id="collLink04" type="button" class="btn btn-primary center-block" data-toggle="collapse" data-parent="#accordion" data-target="#collapse4">
-	  								Click for more information <span class="glyphicon glyphicon-chevron-down"></span>
-	  							</button>
-	  						</h4>
-	  					</div>
-
-	  					<div id="collapse4" class="panel-collapse collapse">
-	  						<div class="panel-body">
-	  							Engineering Content 04
-	  						</div>
-	  					</div>
-
-	  				</div>
-
-
-	  				<div  class="panel panel-default">
-
-	  					<div class="panel-heading">
-	  						<h4 class="panel-title">
-	  							Engineering Content 05
-	  							<button   id="collLink05" type="button" class="btn btn-primary center-block" data-toggle="collapse" data-parent="#accordion" data-target="#collapse5">
-	  								Click for more information <span class="glyphicon glyphicon-chevron-down"></span>
-	  							</button>
-
-	  						</h4>
-	  					</div>
-
-	  					<div id="collapse5" class="panel-collapse collapse">
-	  						<div class="panel-body">
-	  							Engineering Content 05
-	  						</div>
-	  					</div>
-
-	  				</div>
+	  	
 
 	  			</div>
 
