Engineering and Contact page updated
Engineering meta tags updated.

Contact address changed and map.js coordinates updated, WeChat icon added and WeChat username added. #contactD1 and contactD2 height increased.

style updated with all changes required above. This includes increasing max-height of .navbar-collapse to include Engineering Services in Navbar.

--- a/en/contact.html
+++ b/en/contact.html
@@ -261,8 +261,8 @@
         <div id="contactOuter" class="col-md-6">
           <div id="contactD1" >
 	      	  <address >
-	      	  	Address:<span class="addrIndent"><strong>iNQ Central</strong></span><br> 
-	      	  	<span class="hidAddInd" >Address:</span><span class="addrIndent">Little Fletcher Street</span><br>
+	      	  	Address:<span class="addrIndent"><strong>Innovation NQ</strong></span><br> 
+	      	  	<span class="hidAddInd" >Address:</span><span class="addrIndent">143 Walker Street</span><br>
 	      	  	<span class="hidAddInd" >Address:</span><span class="addrIndent">Townsville QLD 4810</span><br>
 	      	  	<span class="hidAddInd" >Address:</span><span class="addrIndent">AUSTRALIA</span><br>
 	      	  </address>
@@ -271,9 +271,27 @@
 	      	  	<span class="glyphicon glyphicon-envelope " ></span> Email:<span class="addrIndent2"><a href="mailto:tanya.barlow@aozhongqiao.com">tanya.barlow@aozhongqiao.com</a></span><br>
 	      	  </address>
 
+
 	      	  <address class="visible-xs">
 	      	  	Email:<span class="addrIndent2"><a href="mailto:tanya.barlow@aozhongqiao.com">tanya.barlow@aozhongqiao.com</a></span><br>
 	      	  </address>
+
+	      	  <address class="visible-lg visible-md visible-sm">
+	      	  	<picture>
+	      	  		<img src="../images/iconfinder_wechat_386746.svg" style="width: 28px; height: 28px;">
+	      	  	</picture>
+
+	      	  	WeChat:<span class="addrIndent3">Tanya_AZQ</span><br>
+	      	  </address>
+
+	      	  <address class="visible-xs">
+	      	  	<picture>
+	      	  		<img src="../images/iconfinder_wechat_386746.svg" style="width: 28px; height: 28px;">
+	      	  	</picture>
+
+	      	  	<span class="addrIndent3">Tanya_AZQ</span><br>
+	      	  </address>
+	      	 
 
       	  	<div class="Skype visible-md visible-lg ">
 
