--- a/en/engineering.html
+++ b/en/engineering.html
@@ -14,7 +14,7 @@
 	<link rel="alternate"  href="http://www.aozhongqiao.com/en/engineering.html" hreflang="en">  
 	<link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/engineering.html" hreflang="zh-hans">
 
-	<meta name="description" content="Basic Mandarin Chinese engineering for business or travel, Targeted Mandarin Chinese phrases and Simplified Chinese characters for professionals working in China">
+	<meta name="description" content="Basic Mandarin Chinese engineering for business or travel, Targeted Mandarin Chinese phrases and Simplified Chinese characters for professionals working in China, Project Work in China, Commissioning in China">
 
 	<meta name="google" content="notranslate">
 
