Styling added for WeChat img on Contact page
Styling added for WeChat img on Contact page

--- a/en/contact.html
+++ b/en/contact.html
@@ -278,7 +278,7 @@
 
 	      	  <address class="visible-lg visible-md visible-sm">
 	      	  	<picture>
-	      	  		<img src="../images/iconfinder_wechat_386746.svg" style="width: 28px; height: 28px;">
+	      	  		<img src="../images/iconfinder_wechat_386746.svg" >
 	      	  	</picture>
 
 	      	  	WeChat:<span class="addrIndent3">Tanya_AZQ</span><br>
@@ -286,7 +286,7 @@
 
 	      	  <address class="visible-xs">
 	      	  	<picture>
-	      	  		<img src="../images/iconfinder_wechat_386746.svg" style="width: 28px; height: 28px;">
+	      	  		<img src="../images/iconfinder_wechat_386746.svg" >
 	      	  	</picture>
 
 	      	  	<span class="addrIndent3">Tanya_AZQ</span><br>
