Powerpoint section added to hidden content
Powerpoint section added to inv.html and file Aozhongqiao_TIQ_Mandarin Chinese & Travelling in China training course.pptx

--- a/inv/inv.html
+++ b/inv/inv.html
@@ -216,9 +216,14 @@
 	
 <dl>
 	
+<h1>Powerpoint presentations:</h1>
 
-
+<dl>
 	
+	<dt>Aozhongqiao_TIQ_Mandarin Chinese & Travelling in China training course</dt>
+	<dd><a href="Aozhongqiao_TIQ_Mandarin Chinese & Travelling in China training course.pptx" target="_blank">View in browser</a></dd>
+
+</dl>
 
 
 
