Redundant download file links removed
Redundant download file links removed

--- a/inv/inv.html
+++ b/inv/inv.html
@@ -39,13 +39,17 @@
 
 
 		<dt>EMH-Glossary-of-Crane-Terminology</dt>
-		<dd><a href="EMH-Glossary-of-Crane-Terminology.pdf" >View in browser</a></dd>
-		<dd><a href="EMH-Glossary-of-Crane-Terminology.pdf" download="">Download file</a></dd>
+		<dd>
+			<a href="EMH-Glossary-of-Crane-Terminology.pdf" >View in browser</a>
+		</dd>
+
 
 
 		<dt>Pinyin practice_Unit 4 Workbook_Revi</dt>
-		<dd><a href="Pinyin practice_Unit 4 Workbook_Revi.m4a" >Listen in browser</a></dd>
-		<dd><a href="Pinyin practice_Unit 4 Workbook_Revi.m4a" download="">Download file</a></dd>
+		<dd>
+			<a href="Pinyin practice_Unit 4 Workbook_Revi.m4a" >Listen in browser</a>
+		</dd>
+
 
 		<dt>800kV DC China</dt>
 		<dd><a href="800kV DC China.gif" target="_blank" >View in browser</a></dd>
@@ -68,12 +72,8 @@
 				<dd>
 					<a href="Aozhongqiao_TIQ_Mandarin Chinese & Travelling in China training course.pptx" target="_blank">View in browser</a>
 				</dd>
-				
-				<dd>
-					<a href="Aozhongqiao_TIQ_Mandarin Chinese & Travelling in China training course.pptx" download="">
-						Download file
-					</a>
-				</dd>
+
+
 
 			</dl>
 
