engineering services menu item added to all zh-hans pages

--- a/zh-hans/affiliations.html
+++ b/zh-hans/affiliations.html
@@ -195,6 +195,7 @@
 		    			<li role="presentation" ><a href="index.html">首页</a></li>
 		    			<li role="presentation"><a href="about.html">专业背景</a></li>
 		    			<li role="presentation"><a href="courses.html">语言辅导服务</a></li>
+		    			<li role="presentation"><a href="engineering.html">工程服务</a></li>
 		    			<li role="presentation" ><a href="qual.html">资格</a></li>
 		    			<li role="presentation" class="active"><a href="affiliations.html">所属 </a></li>
 		    			<li role="presentation"><a href="fees.html">费用</a></li>
