http https mixed content error  google script served using http instead of https

--- a/en/contact.html
+++ b/en/contact.html
@@ -178,7 +178,7 @@
 	<script src="../js/modernizr-custom.js" async></script>
 
 	<!-- The Google Maps API is a JavaScript library.-->
-  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDL534a38E4cpkNncqnMVtAbQmI4QeWFGs&callback=myMap" defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL534a38E4cpkNncqnMVtAbQmI4QeWFGs&callback=myMap" defer></script>
 
 </head>
 
