canonical and alternate https added

--- a/en/about.html
+++ b/en/about.html
@@ -10,9 +10,9 @@
 
   <title>Aozhongqiao, Description of Tanya Barlow's professional background Electrical Engineer Mandarin Chinese Townsville Queensland Australia</title>
 
-  <link rel="canonical"  href="http://www.aozhongqiao.com/en/about.html">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/en/about.html" hreflang="en">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/about.html" hreflang="zh-hans">
+  <link rel="canonical"  href="https://www.aozhongqiao.com/en/about.html">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/en/about.html" hreflang="en">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/about.html" hreflang="zh-hans">
 
   <meta name="description" content="Australian electrical engineer who has studied Mandarin Chinese. Tanya has worked at the Port Kembla steelworks in Australia and Bluescope Steel Suzhou in China. Tanya can provide one-to-one tutoring for people learning Mandarin Chinese for the first time, and she can also help Mandarin Chinese speakers with their spoken English, Mandarin Chinese tutoring Townsville, Mandarin Chinese Townsville, Mandarin Chinese classes Townsville">
 
