--- a/en/affiliations.html
+++ b/en/affiliations.html
@@ -10,9 +10,9 @@
 
   <title>Aozhongqiao, Mutlimedia and links of businesses and clubs affiliated with Aozhongqiao</title>
 
-  <link rel="canonical"  href="http://www.aozhongqiao.com/en/affiliations.html">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/en/affiliations.html" hreflang="en"> 
-  <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/affiliations.html" hreflang="zh-hans">
+  <link rel="canonical"  href="https://www.aozhongqiao.com/en/affiliations.html">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/en/affiliations.html" hreflang="en"> 
+  <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/affiliations.html" hreflang="zh-hans">
 
   <meta name="description" content="Pictures, videos and hyperlinks of Aozhongqiao's affiliates, The Townsville Chinese Club INC and iNQ (North Queensland innovation hub), Mandarin Chinese tutoring Townsville, Mandarin Chinese Townsville, Mandarin Chinese classes Townsville"> 
 
