--- a/en/contact.html
+++ b/en/contact.html
@@ -11,9 +11,9 @@
 
   <title>Aozhongqiao, Contact and location details for Aozhongqiao</title>
 
-  <link rel="canonical"  href="http://www.aozhongqiao.com/en/contact.html">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/en/contact.html" hreflang="en">  
-  <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/contact.html" hreflang="zh-hans">
+  <link rel="canonical"  href="https://www.aozhongqiao.com/en/contact.html">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/en/contact.html" hreflang="en">  
+  <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/contact.html" hreflang="zh-hans">
 
   <meta name="description" content="Email: tanya.barlow@aozhongqiao.com, Address: iNQ Central, Little Fletcher Street, Townsville, Queensland, Australia , Mandarin Chinese tutoring Townsville, Mandarin Chinese Townsville, Mandarin Chinese classes Townsville">
 
