--- a/en/engineering.html
+++ b/en/engineering.html
@@ -10,9 +10,9 @@
 
 	<title>Aozhongqiao, Description of engineering services provided by Tanya Barlow</title>
 
-	<link rel="canonical"  href="http://www.aozhongqiao.com/en/engineering.html">
-	<link rel="alternate"  href="http://www.aozhongqiao.com/en/engineering.html" hreflang="en">  
-	<link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/engineering.html" hreflang="zh-hans">
+	<link rel="canonical"  href="https://www.aozhongqiao.com/en/engineering.html">
+	<link rel="alternate"  href="https://www.aozhongqiao.com/en/engineering.html" hreflang="en">  
+	<link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/engineering.html" hreflang="zh-hans">
 
 	<meta name="description" content="Basic Mandarin Chinese engineering for business or travel, Targeted Mandarin Chinese phrases and Simplified Chinese characters for professionals working in China, Project Work in China, Commissioning in China">
 
