--- a/en/qual.html
+++ b/en/qual.html
@@ -10,9 +10,9 @@
 
   <title>Aozhongqiao, Detailed description of Tanya Barlow's qualifications</title>
 
-  <link rel="canonical"  href="http://www.aozhongqiao.com/en/qual.html">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/en/qual.html" hreflang="en">  
-  <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/qual.html" hreflang="zh-hans">
+  <link rel="canonical"  href="https://www.aozhongqiao.com/en/qual.html">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/en/qual.html" hreflang="en">  
+  <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/qual.html" hreflang="zh-hans">
 
   <meta name="description" content="Qualifications: Bachelor of Engineering (Electrical & Electronic), Graduate Diploma of Computing, Certificate of Arts (Australia & the Asia-Pacific Region). University subjects include: Modern Standard Chinese (Mandarin), Introduction to Asia, Chinese Political Economy & Business, Politics in Contemporary China, Ethnic Questions in East & South Asia, Mandarin Chinese tutoring Townsville, Mandarin Chinese Townsville, Mandarin Chinese classes Townsville"> 
 
