--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 	 <title>Aozhongqiao, Provides Tanya Barlow Mandarin Chinese/English language coach Townsville Queensland Australia</title>
 
-	<meta property="og:url" content="http://www.aozhongqiao.com/" /> 
+	<meta property="og:url" content="https://www.aozhongqiao.com/" /> 
 	<meta property="og:title" content="Aozhongqiao, Provides Tanya Barlow Mandarin Chinese/English language coach Townsville Queensland Australia" />
 	<meta property="og:description" content="One-to-one tutoring, basic Mandarin Chinese tutoring for business or travel, English pronunciation coaching for Mandarin speakers, targeted English tutoring for Chinese students, targeted English tutoring for Chinese professionals, Mandarin Chinese tutoring Townsville, Mandarin Chinese Townsville, Mandarin Chinese classes Townsville" />
 	<meta property="og:image" content="http://www.aozhongqiao.com/images/200x200AozhongqiaV7.png" />
@@ -16,11 +16,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   
-  <link rel="canonical"  href="http://www.aozhongqiao.com/">
-
-  <link rel="alternate"  href="http://www.aozhongqiao.com/" hreflang="en">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/en/index.html" hreflang="en">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/index.html" hreflang="zh-hans">
+  <link rel="canonical"  href="https://www.aozhongqiao.com/">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/index.html" hreflang="en">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/index.html" hreflang="zh-hans">
   
   <meta name="description" content="One-to-one tutoring, basic Mandarin Chinese tutoring for business or travel, English pronunciation coaching for Mandarin speakers, targeted English tutoring for Chinese students, targeted English tutoring for Chinese professionals, Mandarin Chinese tutoring Townsville, Mandarin Chinese Townsville, Mandarin Chinese classes Townsville">
 
