--- a/en/courses.html
+++ b/en/courses.html
@@ -10,9 +10,9 @@
 
   <title>Aozhongqiao, Description of tutoring services provided by Tanya Barlow</title>
 
-  <link rel="canonical"  href="http://www.aozhongqiao.com/en/courses.html">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/en/courses.html" hreflang="en">  
-  <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/courses.html" hreflang="zh-hans">
+  <link rel="canonical"  href="https://www.aozhongqiao.com/en/courses.html">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/en/courses.html" hreflang="en">  
+  <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/courses.html" hreflang="zh-hans">
 
   <meta name="description" content="Basic Mandarin Chinese tutoring for business or travel, Targeted Mandarin Chinese phrases and Simplified Chinese characters for professionals working in China, English pronunciation coaching for Mandarin speakers, Targeted English tutoring for Chinese university students, English pronunciation coaching for oral presentations, Mandarin Chinese tutoring Townsville, Mandarin Chinese Townsville, Mandarin Chinese classes Townsville">
 
