--- a/en/fees.html
+++ b/en/fees.html
@@ -10,9 +10,9 @@
 
 	<title>Aozhongqiao, Description of different tutoring services fees available at Aozhongqiao</title>
 
-	<link rel="canonical"  href="http://www.aozhongqiao.com/en/fees.html">
-	<link rel="alternate"  href="http://www.aozhongqiao.com/en/fees.html" hreflang="en"> 
-	<link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/fees.html" hreflang="zh-hans">
+	<link rel="canonical"  href="https://www.aozhongqiao.com/en/fees.html">
+	<link rel="alternate"  href="https://www.aozhongqiao.com/en/fees.html" hreflang="en"> 
+	<link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/fees.html" hreflang="zh-hans">
 
 	<meta name="description" content="Standard Fees: $75/hr, Student Fees: $45/hr, Townsville Chinese Club Fees: $35/hr. Fees are provided in Australian Dollars, Mandarin Chinese tutoring Townsville, Mandarin Chinese Townsville, Mandarin Chinese classes Townsville">
 
