cononical and alternate changed from http to https

--- a/zh-hans/about.html
+++ b/zh-hans/about.html
@@ -10,9 +10,9 @@
 
   <title>澳中桥 ， 谭雅∙巴落的专业背景 ， 电气工程师 ， 普通话 ，澳大利亚 昆士兰州 汤斯维尔市</title>
 
-  <link rel="canonical"  href="http://www.aozhongqiao.com/zh-hans/about.html">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/en/about.html" hreflang="en">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/about.html" hreflang="zh-hans">
+  <link rel="canonical"  href="https://www.aozhongqiao.com/zh-hans/about.html">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/en/about.html" hreflang="en">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/about.html" hreflang="zh-hans">
   
   <meta name="description" content="我是澳大利亚电气工程师， 曾学过中文。在澳大利亚港口城市 肯布拉 钢厂及中国苏州博思格钢铁公司工作过。我是汤斯维尔市华侨会的会员。我对中国语言及文化有一定的了解，我可以提供中英文辅导包括针对 中澳商务人士提高专业中文水平，帮助中国留学生提高英文水平。">
 
