--- a/zh-hans/affiliations.html
+++ b/zh-hans/affiliations.html
@@ -10,9 +10,9 @@
 
   <title>澳中桥 ，澳中桥的所属</title>
 
-  <link rel="canonical"  href="http://www.aozhongqiao.com/zh-hans/affiliations.html">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/en/affiliations.html" hreflang="en"> 
-  <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/affiliations.html" hreflang="zh-hans">
+  <link rel="canonical"  href="https://www.aozhongqiao.com/zh-hans/affiliations.html">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/en/affiliations.html" hreflang="en"> 
+  <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/affiliations.html" hreflang="zh-hans">
   
   <meta name="description" content="汤斯维尔市华侨会的多媒体 , 汤斯维尔市华侨会的超链接 , 澳大利亚昆士兰州北部创新的多媒体 ，澳大利亚昆士兰州北部创新的超链接">
 
