--- a/zh-hans/contact.html
+++ b/zh-hans/contact.html
@@ -10,9 +10,9 @@
 
   <title>澳中桥 ， 澳中桥的联系</title>
 
-  <link rel="canonical"  href="http://www.aozhongqiao.com/zh-hans/contact.html">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/en/contact.html" hreflang="en">  
-  <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/contact.html" hreflang="zh-hans">
+  <link rel="canonical"  href="https://www.aozhongqiao.com/zh-hans/contact.html">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/en/contact.html" hreflang="en">  
+  <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/contact.html" hreflang="zh-hans">
 
   <meta name="description" content="电邮地址: tanya_barlow@bigpond.com 地址: 澳大利亚 昆士兰州 汤斯维尔市 小弗林德斯街 iNQ中央 iNQ Central">
 
