--- a/zh-hans/qual.html
+++ b/zh-hans/qual.html
@@ -10,9 +10,9 @@
 
   <title>澳中桥 ， 谭雅∙巴落的大学资格</title>
 
-  <link rel="canonical"  href="http://www.aozhongqiao.com/zh-hans/qual.html">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/en/qual.html" hreflang="en">  
-  <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/qual.html" hreflang="zh-hans"> 
+  <link rel="canonical"  href="https://www.aozhongqiao.com/zh-hans/qual.html">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/en/qual.html" hreflang="en">  
+  <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/qual.html" hreflang="zh-hans"> 
 
   <meta name="description" content="谭雅∙巴落的大学资格 是 电气及电子工程学士 , 研究生文凭(计算机科学) , 文科证书(澳大利亚及亚太地区)">
 
