--- a/zh-hans/courses.html
+++ b/zh-hans/courses.html
@@ -10,9 +10,9 @@
 
   <title>澳中桥， 谭雅·巴落的语言辅导服务</title>
 
-  <link rel="canonical"  href="http://www.aozhongqiao.com/zh-hans/courses.html">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/en/courses.html" hreflang="en">  
-  <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/courses.html" hreflang="zh-hans"> 
+  <link rel="canonical"  href="https://www.aozhongqiao.com/zh-hans/courses.html">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/en/courses.html" hreflang="en">  
+  <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/courses.html" hreflang="zh-hans"> 
 
   <meta name="description" content="一对一辅导 , 初级中文辅导 , 纠正英语发音 , 中国留学生英语辅导 , 中国商务人士英语辅导 , 中国专业人士英语辅导">
 
