--- a/zh-hans/fees.html
+++ b/zh-hans/fees.html
@@ -10,9 +10,9 @@
 
   <title>澳中桥 ， 澳中桥的费用</title>
 
-  <link rel="canonical"  href="http://www.aozhongqiao.com/zh-hans/fees.html">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/en/fees.html" hreflang="en"> 
-  <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/fees.html" hreflang="zh-hans">
+  <link rel="canonical"  href="https://www.aozhongqiao.com/zh-hans/fees.html">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/en/fees.html" hreflang="en"> 
+  <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/fees.html" hreflang="zh-hans">
 
   <meta name="description" content="商务人士的费用是澳$75/小时，专业人士的费用是澳$75/小时 ，学生的费用是澳$45/小时 ，汤市华侨会会员的费用是澳$35/小时">
 
