--- a/zh-hans/index.html
+++ b/zh-hans/index.html
@@ -11,10 +11,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   
-  <link rel="canonical"  href="http://www.aozhongqiao.com/zh-hans/index.html">
-
-  <link rel="alternate"  href="http://www.aozhongqiao.com/index.html" hreflang="en">
-  <link rel="alternate"  href="http://www.aozhongqiao.com/zh-hans/index.html" hreflang="zh-hans">
+  <link rel="canonical"  href="https://www.aozhongqiao.com/zh-hans/index.html">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/index.html" hreflang="en">
+  <link rel="alternate"  href="https://www.aozhongqiao.com/zh-hans/index.html" hreflang="zh-hans">
   
   <meta name="description" content="一对一辅导 , 初级中文辅导 , 纠正英语发音 , 中国留学生英语辅导 , 中国商务人士英语辅导 , 中国专业人士英语辅导">
 
