--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
   <meta name="google" content="notranslate">
 
+  <meta name="robots" content="index, follow"/>
+
   <meta name="norton-safeweb-site-verification" content="-6s4p5byd02k-lb3vuha9gvmpgdls79dbfxmy7ugbb2quwddjufze5h2n-e0jfqm-wdec6yedwmo1a9uu0n0my3ownpsfp7c6x1-d49z5cabbl6hat0cmvhgh0o9rcex" />
   
   <!--BS Latest compiled and minified CSS -->
