All english pages have Robots meta tag added

--- a/en/about.html
+++ b/en/about.html
@@ -17,6 +17,8 @@
   <meta name="description" content="Australian electrical engineer who has studied Mandarin Chinese. Tanya has worked at the Port Kembla steelworks in Australia and Bluescope Steel Suzhou in China. Tanya can provide one-to-one tutoring for people learning Mandarin Chinese for the first time, and she can also help Mandarin Chinese speakers with their spoken English, Mandarin Chinese tutoring Townsville, Mandarin Chinese Townsville, Mandarin Chinese classes Townsville">
 
   <meta name="google" content="notranslate">
+
+  <meta name="robots" content="index, follow"/>
   
   <!--BS Latest compiled and minified CSS -->
 
