--- a/en/qual.html
+++ b/en/qual.html
@@ -18,6 +18,8 @@
 
   <meta name="google" content="notranslate">
 
+  <meta name="robots" content="index, follow"/>
+
   
   <!--BS Latest compiled and minified CSS -->
 	<link rel="preload" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
