All Chinese pages updated with robots meta tag.

--- a/zh-hans/about.html
+++ b/zh-hans/about.html
@@ -17,6 +17,8 @@
   <meta name="description" content="我是澳大利亚电气工程师， 曾学过中文。在澳大利亚港口城市 肯布拉 钢厂及中国苏州博思格钢铁公司工作过。我是汤斯维尔市华侨会的会员。我对中国语言及文化有一定的了解，我可以提供中英文辅导包括针对 中澳商务人士提高专业中文水平，帮助中国留学生提高英文水平。">
 
   <meta name="google" content="notranslate">
+
+  <meta name="robots" content="index, follow"/>
   
   <!--BS Latest compiled and minified CSS -->
   <link rel="preload" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
