--- a/zh-hans/contact.html
+++ b/zh-hans/contact.html
@@ -17,6 +17,8 @@
   <meta name="description" content="电邮地址: tanya_barlow@bigpond.com 地址: 澳大利亚 昆士兰州 汤斯维尔市 小弗林德斯街 iNQ中央 iNQ Central">
 
   <meta name="google" content="notranslate">
+
+  <meta name="robots" content="index, follow"/>
   
   <!--BS Latest compiled and minified CSS -->
 
