--- a/zh-hans/courses.html
+++ b/zh-hans/courses.html
@@ -17,6 +17,8 @@
   <meta name="description" content="一对一辅导 , 初级中文辅导 , 纠正英语发音 , 中国留学生英语辅导 , 中国商务人士英语辅导 , 中国专业人士英语辅导">
 
   <meta name="google" content="notranslate">
+
+  <meta name="robots" content="index, follow"/>
   
   <!--BS Latest compiled and minified CSS -->
   <link rel="preload" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
