--- a/zh-hans/fees.html
+++ b/zh-hans/fees.html
@@ -17,6 +17,8 @@
   <meta name="description" content="商务人士的费用是澳$75/小时，专业人士的费用是澳$75/小时 ，学生的费用是澳$45/小时 ，汤市华侨会会员的费用是澳$35/小时">
 
   <meta name="google" content="notranslate">
+
+  <meta name="robots" content="index, follow"/>
   
   <!--BS Latest compiled and minified CSS -->
 
