robots meta tag added to qual zh-hans page

--- a/zh-hans/qual.html
+++ b/zh-hans/qual.html
@@ -17,6 +17,8 @@
   <meta name="description" content="谭雅∙巴落的大学资格 是 电气及电子工程学士 , 研究生文凭(计算机科学) , 文科证书(澳大利亚及亚太地区)">
 
   <meta name="google" content="notranslate">
+
+  <meta name="robots" content="index, follow"/>
   
   <!--BS Latest compiled and minified CSS -->
 
