English and Chinese contact pages updated with Co. Habitat location. map.js pages also updated with location. Lastly sitemap.xml updated with update date.

--- a/zh-hans/contact.html
+++ b/zh-hans/contact.html
@@ -262,8 +262,8 @@
 	      	  	<span class="hidAddInd" >地址:</span><span class="addrIndent">昆士兰州</span><br>
 	      	  	<span class="hidAddInd" >地址:</span><span class="addrIndent">汤斯维尔市</span><br>
 	      	  	<span class="hidAddInd" >地址:</span><span class="addrIndent">小弗林德斯街</span><br>
-							<span class="hidAddInd" >地址:</span><strong><span class="addrIndent">iNQ 中央</span></strong><br>
-	      	  	<span class="hidAddInd" >地址:</span><strong><span class="addrIndent"><span class="enFont">iNQ Central</span></span></strong>
+							<span class="hidAddInd" >地址:</span><strong><span class="addrIndent">Co. Habitat  中央</span></strong><br>
+	      	  	<span class="hidAddInd" >地址:</span><strong><span class="addrIndent"><span class="enFont">Co. Habitat - Co-Working Space</span></span></strong>
 	      	  </address>
 
 
