--- a/en/contact.html
+++ b/en/contact.html
@@ -263,9 +263,9 @@
         <div id="contactOuter" class="col-md-6">
           <div id="contactD1" >
 	      	  <address >
-	      	  	Address:<span class="addrIndent"><strong>Innovation NQ</strong></span><br> 
-	      	  	<span class="hidAddInd" >Address:</span><span class="addrIndent">143 Walker Street</span><br>
-	      	  	<span class="hidAddInd" >Address:</span><span class="addrIndent">Townsville QLD 4810</span><br>
+	      	  	Address:<span class="addrIndent"><strong>Co. Habitat - Co-Working Space</strong></span><br> 
+	      	  	<span class="hidAddInd" >Address:</span><span class="addrIndent">33-35 Palmer Street Entrance via, Plume St</span><br>
+	      	  	<span class="hidAddInd" >Address:</span><span class="addrIndent">South Townsville QLD 4810</span><br>
 	      	  	<span class="hidAddInd" >Address:</span><span class="addrIndent">AUSTRALIA</span><br>
 	      	  </address>
 
