--- a/zh-hans/affiliations.html
+++ b/zh-hans/affiliations.html
@@ -415,13 +415,13 @@
 
 			          		<picture >
 
-							  			<source type="image/webp" media="(min-width:992px)" srcset="../images/webp/515x350inq01.webp">
+							  			<!-- <source type="image/webp" media="(min-width:992px)" srcset="../images/webp/515x350inq01.webp">
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq01.webp">
-							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq01.webp">
+							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq01.webp"> -->
 
 			      	  			<img class="visible-md visible-lg"  src="../images/515x350inq01.png">
 			      	  			<img class="visible-sm"  src="../images/inq01.png">
-			      	  			<img class="visible-xs"  src="../images/330x224inq01.png">
+			      	  			<img class="visible-xs"  src="../images/330x224-Co-habitat-logo_header.png">
 
 										</picture>
 
@@ -432,13 +432,13 @@
 
 			          		<picture >
 
-							  			<source type="image/webp" media="(min-width:992px)" srcset="../images/webp/515x350inq03.webp">
+							  			<!-- <source type="image/webp" media="(min-width:992px)" srcset="../images/webp/515x350inq03.webp">
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq03.webp">
-							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq03.webp">
+							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq03.webp"> -->
 
 				      	  		<img class="visible-md visible-lg"  src="../images/515x350inq03.jpg">
 			      	  			<img class="visible-sm"  src="../images/inq03.jpg">
-			      	  			<img class="visible-xs"  src="../images/330x224inq03.jpg">
+			      	  			<img class="visible-xs"  src="../images/330x224-Co-habitat-Entry-Way.png">
 
 										</picture>
 
@@ -448,13 +448,13 @@
 
 			          		<picture >
 
-							  			<source type="image/webp" media="(min-width:992px)" srcset="../images/webp/515x350inq07.webp">
+							  			<!-- <source type="image/webp" media="(min-width:992px)" srcset="../images/webp/515x350inq07.webp">
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq07.webp">
-							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq07.webp">
+							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq07.webp"> -->
 
 			      	  			<img class="visible-md visible-lg"  src="../images/515x350inq07.jpg">
 			      	  			<img class="visible-sm"  src="../images/inq07.jpg">
-			      	  			<img class="visible-xs"  src="../images/330x224inq07.jpg">
+			      	  			<img class="visible-xs"  src="../images/330x224-Co-habitat-Reception.png">
 
 										</picture>
 
@@ -466,13 +466,13 @@
 
 			          		<picture >
 
-							  			<source type="image/webp" media="(min-width:992px)" srcset="../images/webp/515x350inq06.webp">
+							  			<!-- <source type="image/webp" media="(min-width:992px)" srcset="../images/webp/515x350inq06.webp">
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq06.webp">
-							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq06.webp">
+							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq06.webp"> -->
 
 			      	  			<img class="visible-md visible-lg"  src="../images/515x350inq06.jpg">
 			      	  			<img class="visible-sm"  src="../images/inq06.jpg">
-			      	  			<img class="visible-xs"  src="../images/330x224inq06.jpg">
+			      	  			<img class="visible-xs"  src="../images/330x224-Co-habitat-Hot-Desks-and-Shared-Office.png">
 
 										</picture>
 
@@ -483,13 +483,13 @@
 
 			          		<picture >
 
-							  			<source type="image/webp" media="(min-width:992px)" srcset="../images/webp/515x350inq02.webp">
+							  			<!-- <source type="image/webp" media="(min-width:992px)" srcset="../images/webp/515x350inq02.webp">
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq02.webp">
-							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq02.webp">
+							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq02.webp"> -->
 
 			      	  			<img class="visible-md visible-lg"  src="../images/515x350inq02.jpg">
 			      	  			<img class="visible-sm"  src="../images/inq02.jpg">
-			      	  			<img class="visible-xs"  src="../images/330x224inq02.jpg">
+			      	  			<img class="visible-xs"  src="../images/330x224-Co-habitat-Private-Office.png">
 
 										</picture>
 
@@ -500,13 +500,13 @@
 
 			          		<picture >
 
-							  			<source type="image/webp" media="(min-width:992px)" srcset="../images/webp/515x350inq04.webp">
+							  			<!-- <source type="image/webp" media="(min-width:992px)" srcset="../images/webp/515x350inq04.webp">
 							  			<source type="image/webp" media="(min-width:768px)" srcset="../images/webp/inq04.webp">
-							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq04.webp">
+							  			<source type="image/webp" media="(max-width:767px)" srcset="../images/webp/330x224inq04.webp"> -->
 
 			      	  			<img class="visible-md visible-lg"  src="../images/515x350inq04.jpg">
 			      	  			<img class="visible-sm" src="../images/inq04.jpg">
-			      	  			<img class="visible-xs"  src="../images/330x224inq04.jpg">
+			      	  			<img class="visible-xs"  src="../images/330x224-Co-habitat-Boardroom.png">
 
 										</picture>
 
